add card for item, styling still in progress

--- a/themes/housekeeper/pages/items.htm
+++ b/themes/housekeeper/pages/items.htm
@@ -1,5 +1,17 @@
 url = "/items"
 layout = "default"
 title = "Housekeeper - Items"
-==
 
+[itemsList]
+==
+<section class="wrapper">
+    <div class="container">
+        <div class="row">
+            <div class="col text-center mb-5">
+                <h1 class="display-4 font-weight-bolder">Housekeeper</h1>
+                <p class="lead">Lista elementów</p>
+            </div>
+        </div>
+        {% component 'itemsList' %}
+    </div>
+</section>
